Modify: Fix Z-index of card in product.css product-detail

--- a/css/product-detail/product.css
+++ b/css/product-detail/product.css
@@ -345,7 +345,7 @@
 .wrapper .related-product .product .card:hover .controls {
     left: 80%;
     opacity: 1;
-    z-index: 999999999;
+    z-index: 999;
     cursor: pointer;
 }
 
